--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,17 +62,17 @@ repos:
   - repo: https://github.com/phantomcyber/dev-cicd-tools
     rev: v2.0.9
     hooks:
-      - id: build-docs
-        language: python
-        additional_dependencies: ["local-hooks"]
-        args: ['.']
+      # - id: build-docs
+      #   language: python
+      #   additional_dependencies: ["local-hooks"]
+      #   args: ['.']
       - id: copyright
         language: python
         additional_dependencies: ["local-hooks"]
         args: ['.']
-      - id: package-app-dependencies
-        language: python
-        additional_dependencies: ["local-hooks"]
+      # - id: package-app-dependencies
+      #   language: python
+      #   additional_dependencies: ["local-hooks"]
       - id: notice-file
         language: python
         additional_dependencies: ["local-hooks"]
@@ -81,7 +81,7 @@ repos:
         language: python
         additional_dependencies: ["local-hooks"]
         args: ['.']
-      - id: static-tests
-        language: python
-        additional_dependencies: ["local-hooks"]
-        args: ['.']
+      # - id: static-tests
+      #   language: python
+      #   additional_dependencies: ["local-hooks"]
+      #   args: ['.']
