--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,10 +73,10 @@ repos:
       # - id: package-app-dependencies
       #   language: python
       #   additional_dependencies: ["local-hooks"]
-      - id: notice-file
-        language: python
-        additional_dependencies: ["local-hooks"]
-        args: ['.']
+      # - id: notice-file
+      #   language: python
+      #   additional_dependencies: ["local-hooks"]
+      #   args: ['.']
       - id: release-notes
         language: python
         additional_dependencies: ["local-hooks"]
