--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -70,9 +70,9 @@ repos:
         language: python
         additional_dependencies: ["local-hooks"]
         args: ['.']
-      # - id: package-app-dependencies
-      #   language: python
-      #   additional_dependencies: ["local-hooks"]
+      - id: package-app-dependencies
+        language: python
+        additional_dependencies: ["local-hooks"]
       # - id: notice-file
       #   language: python
       #   additional_dependencies: ["local-hooks"]
